<resources>
    <string name="app_name">Fitness Track App</string>
    <string name="home">Home</string>
    <string name="learn_workout">Learn Workout</string>
    <string name="add_workout">Add Workout</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fitness_tracker">Fitness Tracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="YOUTUBE_API">AIzaSyCpHJIJMmfO6rDXXMEl-qDVKjcc-gqx7YQ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_s_summary">Today\'s Summary</string>
    <string name="workout_type">Workout Type</string>
    <string name="start">START</string>
</resources>