<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_learn"
        android:icon="@drawable/learn"
        android:title="@string/learn_workout"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_track"
        android:icon="@drawable/track"
        android:title="@string/add_workout"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="always"/>

</menu>