<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/blue_bg">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:src="@drawable/icons8_dumbbell_64"
                android:layout_marginTop="60dp"
                android:layout_gravity="center_horizontal"/>
            
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fitness_tracker"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="145dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/username_icon"
                android:background="@android:color/transparent"
                android:hint="@string/username"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                />

            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:src="@drawable/username_person"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="12.7dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/etPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/icon"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:src="@drawable/password"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/blue_fill__rounded_color"

            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/blue_border_white_back_rounded"
            android:text="Sign Up"
            android:textColor="@color/black"
            android:textSize="12sp" />


    </LinearLayout>

</LinearLayout>